Coverity analysis defect 105026: MISSING_ASSIGN

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Security 2018-10-08
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      MISSING_ASSIGN

      Defect 105026 (STATIC_C)
      Checker MISSING_ASSIGN (subcategory uncalled)
      File: /src/mongo/util/shell_exec.cpp
      Parse Warning (no function name available)
      /src/mongo/util/shell_exec.cpp, line: 203
      Class "mongo::<unnamed>::ProcessStream" owns resources that are freed in its destructor but has no user-written assignment operator.

          class ProcessStream {
      

            Assignee:
            Sara Golemon (Inactive)
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: