SERVER-37211 Make ProcessStream non-copyable/assignable